// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageTransactions has the expected html structure 1`] = `
<div
  class="ni-page"
>
  <header
    class="ni-page-header"
  >
    <div
      class="ni-page-header-container"
    >
      <div
        class="ni-page-header-text"
      >
        <div
          class="ni-page-header-title"
        >
          <div>
            Transactions
          </div>
        </div>
        <div
          class="ni-page-header-subtitle"
        >
          <div>
            
          </div>
        </div>
      </div>
      <menu
        class="ni-page-header-menu"
      >
        <div>
          <div>
            <div
              class="ni-tool-bar"
            >
              <div
                class="ni-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a>
                    <i
                      class="material-icons"
                    >
                      search
                    </i>
                    <div
                      class="label"
                    >
                      Search
                    </div>
                  </a>
                </div>
                <a
                  class="help"
                >
                  <i
                    class="material-icons"
                  >
                    help_outline
                  </i>
                </a>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="ni-page-main"
  >
    <!---->
    <div
      class="ni-data-msg"
    >
      <div
        class="ni-data-msg__icon"
      >
        <i
          class="material-icons"
        >
          search
        </i>
      </div>
      <div
        class="ni-data-msg__text"
      >
        <div
          class="ni-data-msg__title"
        >
          <div>
            No Results
          </div>
        </div>
        <div
          class="ni-data-msg__subtitle"
        >
          <div>
            Your search did not match any available data.
          </div>
        </div>
      </div>
    </div>
  </main>
  <footer
    class="ni-page-footer"
  >
    <div
      class="container"
    />
  </footer>
</div>
`;

exports[`PageTransactions should filter the transactions 1`] = `
<div
  class="ni-page"
>
  <header
    class="ni-page-header"
  >
    <div
      class="ni-page-header-container"
    >
      <div
        class="ni-page-header-text"
      >
        <div
          class="ni-page-header-title"
        >
          <div>
            Transactions
          </div>
        </div>
        <div
          class="ni-page-header-subtitle"
        >
          <div>
            
          </div>
        </div>
      </div>
      <menu
        class="ni-page-header-menu"
      >
        <div>
          <div>
            <div
              class="ni-tool-bar"
            >
              <div
                class="ni-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a>
                    <i
                      class="material-icons"
                    >
                      search
                    </i>
                    <div
                      class="label"
                    >
                      Search
                    </div>
                  </a>
                </div>
                <a
                  class="help"
                >
                  <i
                    class="material-icons"
                  >
                    help_outline
                  </i>
                </a>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="ni-page-main"
  >
    <div
      class="ni-modal-search"
    >
      <div
        class="ni-modal-search-container"
      >
        <input
          class="mousetrap ni-field"
          placeholder="Search..."
          type="text"
        />
        <button
          class="ni-btn"
        >
          <span
            class="ni-btn-container"
          >
            <i
              aria-hidden="true"
              class="ni-btn-icon material-icons"
            >
              close
            </i>
            <!---->
          </span>
        </button>
      </div>
    </div>
    <div
      class="ni-data-msg"
    >
      <div
        class="ni-data-msg__icon"
      >
        <i
          class="material-icons"
        >
          search
        </i>
      </div>
      <div
        class="ni-data-msg__text"
      >
        <div
          class="ni-data-msg__title"
        >
          <div>
            No Results
          </div>
        </div>
        <div
          class="ni-data-msg__subtitle"
        >
          <div>
            Your search did not match any available data.
          </div>
        </div>
      </div>
    </div>
  </main>
  <footer
    class="ni-page-footer"
  >
    <div
      class="container"
    />
  </footer>
</div>
`;
